@@ -465,7 +465,11 @@ if ($sys_show_source) {
                 } elseif (!$project->isProject()) {
 
                 } else {
-                    $TABS_DIRS[]='/projects/'.$project->getUnixName().'/';
+		    if (isset ($GLOBALS['sys_noforcetype']) && $GLOBALS['sys_noforcetype']) {
+		    	$TABS_DIRS[]='/project/?group_id='. $params['group'];
+		    } else {
+                    	$TABS_DIRS[]='/projects/'.$project->getUnixName().'/';
+		    }
                     $TABS_TITLES[]=$project->getPublicName();
                     $selected=count($TABS_DIRS)-1;
                 }
@@ -515,7 +519,11 @@ if ($sys_show_source) {
         }
 
         // Summary
-        $TABS_DIRS[]='/projects/'. $project->getUnixName() .'/';
+	if (isset ($GLOBALS['sys_noforcetype']) && $GLOBALS['sys_noforcetype']) {
+		$TABS_DIRS[]='/project/?group_id='. $group;
+	} else {
+        	$TABS_DIRS[]='/projects/'. $project->getUnixName() .'/';
+	}
         $TABS_TITLES[]=_('Summary');
         (($toptab == 'home') ? $selected=(count($TABS_TITLES)-1) : '' );
 
