@@ -1,6 +1,8 @@
 2008-03-07  Christian Bayle <bayle@debian.org>
 	
 	* admin/*: Migrate to util_make_url()
+	* introduced $sys_noforcetype to make possible to get rid of /projects
+	and /users forcetype
 
 2008-02-28  Roland Mas  <lolando@debian.org>
 
